[project]
name = "zyra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gradio>=6.18.0",
    "kokoro>=0.9.4",
    "numpy>=2.4.6",
    "openai>=2.42.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
]
