[project]
name = "zyra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "gradio>=6.18.0",
    "kokoro>=0.9.4",
    "llama-cpp-python>=0.3.30",
    "numpy>=2.4.6",
    "openai>=2.42.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.12.1",
]
